--- a/project1/index.html
+++ b/project1/index.html
@@ -25,18 +25,24 @@
                 <input type="text" v-model.trim="inputName" />
                 <button @click="addName">Add</button>
             </div>
-            <div class="error_label" v-if="showError">
+            <div class="error_label animate__animated animate__fadeInDown" v-if="showError">
                 {{ error }}
             </div>
             <div class="list_of_names">
-                <div v-for="(name, index) in names" :key="name" @click="removeName(index)">{{ name }}</div>
+                <div v-for="(name, index) in names" :key="name" @click="removeName(index)" class="animate__animated animate__fadeIn">{{ name }}</div>
             </div>
             <div v-if="isReady === true">
-                <div class="action_button" @click="showResults">Check looser</div>
+                <div class="action_button animate__animated animate__bounceIn" @click="showResults">Check looser</div>
             </div>
         </div>
-        <div id="result" class="container" v-if="!state">
-            show loser
+        <div id="result" class="container animate__animated animate__fadeIn" v-if="!state">'
+            <div class="results_container">
+                <h1>The looser is:</h1>
+                <div class="result_value">{{ result }}</div>
+                <div class="action_button" @click="resetApp">Start Over</div>
+                <br>
+                <div class="action_button btn2" @click="getNewresult">Get New Result</div>
+            </div>
         </div>
     </div>
 
